# aeolus

./: CMakeLists.txt  README
source/: Makefile  addsynth.h  audio.cc  audio.d  audio.h  audio_alsa.cc  audio_alsa.h  audio_coreaudio.cc  audio_coreaudio.h  audio_jack.cc  audio_jack.h  division.cc  editwin.cc  exp2ap.cc  imidi.cc  imidi.d  imidi.h  imidi_alsa.cc  imidi_alsa.h  imidi_coremidi.cc  imidi_coremidi.h  main.cc  main.d  messages.h  model.cc  model.d  model.h  rankwave.cc  rankwave.h  slave.d
stops/: Makefile
stops/Aeolus/: definition  presets
stops/Aeolus1/: definition  presets
stops/Aeolus2/: definition
